@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Fix bug in debug log using native print instead of Logger (D. Thomas)
+
 2.123620  2012-12-27 22:52:55 Europe/London
 
   * Change default_log_categories from an array to a class method.
